--- a/me.html
+++ b/me.html
@@ -1,167 +1,142 @@
+<!--
+  ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+  ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+  ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+  Welcome in my personal website 100% Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou and Hosted by Github 
+  -->
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-.w3-row-padding img {margin-bottom: 12px}
-.bgimg {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url('https://scontent.fath5-1.fna.fbcdn.net/v/t1.15752-9/80491440_573688420119806_8743856204024905728_n.jpg?_nc_cat=100&_nc_sid=b96e70&_nc_eui2=AeGB3hLh_oUjONiH4E1ImRkWq86Xl0HjdDirzpeXQeN0OAaB93_pZsCXqkbH8yht3AXPjexknxj09iSA2I6dXASV&_nc_ohc=4dCLSMGFwP0AX__yRKG&_nc_ht=scontent.fath5-1.fna&oh=842a047c0044ce4b488260cc7b14d7a5&oe=5EE5B57C');
-  min-height: 100%;
-}
-</style>
-<body>
-
-<!-- Sidebar with image -->
-<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
-  <div class="bgimg"></div>
-</nav>
-
-<!-- Hidden Sidebar (reveals when clicked on menu icon)-->
-<nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
-  <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
-    <i class="fa fa-remove"></i>
-  </a>
-  <div class="w3-bar-block w3-center">
-    <a href="https://alexandroshub.github.io/" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
-
-    <a href="#contact" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Contact</a>
-  </div>
-</nav>
-
-<!-- Page Content -->
-<div class="w3-main w3-padding-large" style="margin-left:40%">
-
-  <!-- Menu icon to open sidebar -->
-  <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
-
-  <!-- Header -->
-  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-    <h1 class="w3-jumbo"><b>Alexandros Papaspyrou</b></h1>
-    <p>All about tech!</p>
-    <img src="https://scontent.fath5-1.fna.fbcdn.net/v/t1.15752-9/70858391_2308985902547585_3130750035994607616_n.jpg?_nc_cat=106&_nc_sid=b96e70&_nc_eui2=AeE_zVtanCWPcpr8shCPYHdA9_tK84IsstH3-0rzgiyy0UYdwUlgKuWld1BqTSt9grfwFa3a6i3EzDpzXTyjSDci&_nc_ohc=iSuHZiE6UCMAX9dRKQo&_nc_ht=scontent.fath5-1.fna&oh=fd5476907a95da8eaa5b9bf519255846&oe=5EE45404" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
-    <img src="https://scontent.fath5-1.fna.fbcdn.net/v/t1.15752-9/70908890_737829860002039_5756772098232025088_n.jpg?_nc_cat=103&_nc_sid=b96e70&_nc_eui2=AeHMbfch8Ql3bAOz31gsXFg_6fjdoBWhC0vp-N2gFaELS__ELfrGGLWGrC3Pf5CmGBJSV4XIG5JGg-MkTLQy8h7L&_nc_ohc=uHQmxEowPB0AX8BIR5D&_nc_ht=scontent.fath5-1.fna&oh=dbea93688d83740305edfcfb8ca96484&oe=5EE7068F" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-      <i class="fa fa-download"></i> Download Resume
-    </button>
-  </header>
-  <!-- Portfolio Section -->
-  <div class="w3-padding-32 w3-content" id="portfolio">
-    <h2 class="w3-text-grey">My Portfolio</h2>
-    <hr class="w3-opacity">
-
-    <!-- Grid for photos -->
-    <div class="w3-row-padding" style="margin:0 -16px">
-      <div class="w3-half">
-        <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%">
-        <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%">
-        <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%">
+  <title>AlexandrosHUB | Automations Programming Technology | Personal website of Papaspyrou Alexandros |</title>
+  <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
+  <!--  /////// meta information  /////// -->
+  <meta charset="UTF-8">
+  <meta name="author" content="Alexandros Papaspyrou">
+  <meta name="description" content="Personal website of Papaspyrou Alexandros">
+  <meta name="keywords" content="Automations, Programming , Technology">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+    .w3-row-padding img {margin-bottom: 12px}
+    .bgimg {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('https://scontent.fath5-1.fna.fbcdn.net/v/t1.15752-9/80491440_573688420119806_8743856204024905728_n.jpg?_nc_cat=100&_nc_sid=b96e70&_nc_eui2=AeGB3hLh_oUjONiH4E1ImRkWq86Xl0HjdDirzpeXQeN0OAaB93_pZsCXqkbH8yht3AXPjexknxj09iSA2I6dXASV&_nc_ohc=4dCLSMGFwP0AX__yRKG&_nc_ht=scontent.fath5-1.fna&oh=842a047c0044ce4b488260cc7b14d7a5&oe=5EE5B57C');
+    min-height: 100%;
+    }
+  </style>
+  <body>
+    <!-- Sidebar with image -->
+    <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+      <div class="bgimg"></div>
+    </nav>
+    <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
+    <nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
+      <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
+      <i class="fa fa-remove"></i>
+      </a>
+      <div class="w3-bar-block w3-center">
+        <a href="https://alexandroshub.github.io/" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
+        <a href="https://alexandroshub.github.io/contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Contact</a>
       </div>
-
-      <div class="w3-half">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/chef.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/p6.jpg" style="width:100%">
+    </nav>
+    <!-- Page Content -->
+    <div class="w3-main w3-padding-large" style="margin-left:40%">
+      <!-- Menu icon to open sidebar -->
+      <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
+      <!-- Header  <h1 class="w3-jumbo"> -->
+      <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+        <h1><b>Alexandros Papaspyrou</b></h1>
+        <p>All about tech!</p>
+        <img src="https://scontent.fath5-1.fna.fbcdn.net/v/t1.15752-9/70858391_2308985902547585_3130750035994607616_n.jpg?_nc_cat=106&_nc_sid=b96e70&_nc_eui2=AeE_zVtanCWPcpr8shCPYHdA9_tK84IsstH3-0rzgiyy0UYdwUlgKuWld1BqTSt9grfwFa3a6i3EzDpzXTyjSDci&_nc_ohc=iSuHZiE6UCMAX9dRKQo&_nc_ht=scontent.fath5-1.fna&oh=fd5476907a95da8eaa5b9bf519255846&oe=5EE45404" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+        <img src="https://scontent.fath5-1.fna.fbcdn.net/v/t1.15752-9/70908890_737829860002039_5756772098232025088_n.jpg?_nc_cat=103&_nc_sid=b96e70&_nc_eui2=AeHMbfch8Ql3bAOz31gsXFg_6fjdoBWhC0vp-N2gFaELS__ELfrGGLWGrC3Pf5CmGBJSV4XIG5JGg-MkTLQy8h7L&_nc_ohc=uHQmxEowPB0AX8BIR5D&_nc_ht=scontent.fath5-1.fna&oh=dbea93688d83740305edfcfb8ca96484&oe=5EE7068F" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+      </header>
+      <!-- Portfolio Section -->
+      <div class="w3-padding-32 w3-content" id="portfolio">
+        <h2 class="w3-text-grey">My Portfolio</h2>
+        <hr class="w3-opacity">
+        <!-- Grid for photos -->
+        <div class="w3-row-padding" style="margin:0 -16px">
+          <div class="w3-half">
+            <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%">
+            <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%">
+            <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%">
+          </div>
+          <div class="w3-half">
+            <img src="x" style="width:100%">
+          </div>
+          <!-- End photo grid -->
+        </div>
+        <!-- End Portfolio Section -->
       </div>
-    <!-- End photo grid -->
-    </div>
-  <!-- End Portfolio Section -->
-  </div>
-
-  <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
-    <h2>λίγα λόγια</h2>
-    <hr class="w3-opacity">
-    <p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο. Με αρκετά σεμινάρια και ημερίδες που αφορούν την τεχνολογία τους Η/Υ και τους αυτοματισμούς και αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.
-    </p>
-    <h3 class="w3-padding-16">My Skills</h3>
-    <p class="w3-wide">Photography</p>
-    <div class="w3-light-grey">
-      <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:95%">95%</div>
-    </div>
-    <p class="w3-wide">Web Design</p>
-    <div class="w3-light-grey">
-      <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">85%</div>
-    </div>
-    <p class="w3-wide">Photoshop</p>
-    <div class="w3-light-grey">
-      <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:80%">80%</div>
-    </div><br>
-
-    <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">14+</span><br>
-        Partners
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">55+</span><br>
-        Projects Done
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">89+</span><br>
-        Happy Clients
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
-        Meetings
-      </div>
-    </div>
-
-    <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download Resume
-    </button>
-
-  
-  <!-- End About Section -->
-  </div>
-
-  <!-- Contact Section -->
-  <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
-    <h2>Contact Me</h2>
-    <hr class="w3-opacity"> 
-    <p>Lets get in touch. Send me a message:</p>
-  
-        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+      <!-- About Section -->
+      <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
+        <h2>λίγα λόγια</h2>
+        <hr class="w3-opacity">
+        <p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο. Με αρκετά σεμινάρια και ημερίδες που αφορούν την τεχνολογία τους Η/Υ και τους αυτοματισμούς και αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.
+        </p>
+        <button class="w3-button w3-light-grey w3-padding-large w3-section">
+        <a href="https://alexandroshub.github.io/cv"> <i class="fa fa-download"></i> Download Resume</a>
         </button>
-    
-  <!-- End Contact Section -->
-  </div>  
-  
-  <!-- Footer -->
-  <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-  <!-- End footer -->
-  </footer>
-  
-<!-- END PAGE CONTENT -->
-</div>
-
-<script>
-// Open and close sidebar
-function openNav() {
-  document.getElementById("mySidebar").style.width = "60%";
-  document.getElementById("mySidebar").style.display = "block";
-}
-
-function closeNav() {
-  document.getElementById("mySidebar").style.display = "none";
-}
-</script>
-
-</body>
+        <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
+          <div class="w3-quarter w3-section">
+            <span class="w3-xlarge">14+</span><br>
+            Partners
+          </div>
+          <div class="w3-quarter w3-section">
+            <span class="w3-xlarge">55+</span><br>
+            Projects Done
+          </div>
+          <div class="w3-quarter w3-section">
+            <span class="w3-xlarge">89+</span><br>
+            Happy Clients
+          </div>
+          <div class="w3-quarter w3-section">
+            <span class="w3-xlarge">150+</span><br>
+            Meetings
+          </div>
+        </div>
+        <!-- End About Section -->
+      </div>
+      <!-- Contact Section -->
+      <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
+        <h2>Contact Me</h2>
+        <hr class="w3-opacity">
+        <p>Lets get in touch. Send me a message:</p>
+        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
+        <a href="https://alexandroshub.github.io/contact"><i class="fa fa-paper-plane"></i> SEND MESSAGE</a>
+        </button>
+        <!-- End Contact Section -->
+      </div>
+      <!-- Footer -->
+      <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+        <p class="w3-medium">
+          <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
+          <i class="fa fa-creative-commons"></i>AlexandrosHub | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a>
+        </p>
+        <!-- End footer -->
+      </footer>
+      <!-- END PAGE CONTENT -->
+    </div>
+    <script>
+      // Open and close sidebar
+      function openNav() {
+        document.getElementById("mySidebar").style.width = "60%";
+        document.getElementById("mySidebar").style.display = "block";
+      }
+      
+      function closeNav() {
+        document.getElementById("mySidebar").style.display = "none";
+      }
+    </script>
+  </body>
 </html>
