--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     Updated: Alien v2 nov20
     Website: https://alexandroshub.github.io
     Contact: 	a-papaspyrou@outlook.com.gr
-	CC-BY international 4 2011-2020 Alexandros Papaspyrou
+    CC-BY international 4 2011-2020 Alexandros Papaspyrou
 
    Contact: 	a-papaspyrou@outlook.com.gr | alexispapy@gmail.com | alexispapy@outlook.com | papaspyrou.alexandros@gmail.com
-   Mob: 		+30 694 054 8867
+   Mob: 	+30 694 054 8867
     
    Welcome in my personal website 100% HTML Hosted by Github
    Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
@@ -126,12 +126,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
+<!-- covid --><a href="https://alexandroshub.github.io/covid.html" class="w3-padding-large w3-hide-small w3-right"><b><font color="green">
+<script src='https://kit.fontawesome.com/a076d05399.js'></script><i class='fas fa-biohazard'></i></font></b></a>
 </div>
 <script>
 function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
 </script>
 <!-- //////////////////////////END of Top menu////////////////////////// -->
-
       <!-- Header with full-height image -->
       <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
       <style>
@@ -286,3 +287,4 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
    ┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
    ├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
    ┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘ -->
+
