--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()" aria-label="menu">
     <i class="fa fa-bars"></i>
   </a>
-<!-- covid --><a href="https://alexandroshub.github.io/covid.html" class="w3-padding-large w3-hide-small w3-right"><b><font color="green">
-<script src='https://kit.fontawesome.com/a076d05399.js'></script><i class='fas fa-biohazard'></i></font></b></a>
+ <!-- 2021 --><a href="https://alexandroshub.github.io/2021.html" class="w3-padding-large w3-hide-small w3-right"><b><font color="red">
+<script src='https://kit.fontawesome.com/a076d05399.js'></script><i class="fas fa-candy-cane"></i></font></b></a>
+<!-- covid -- ><a href="https://alexandroshub.github.io/covid.html" class="w3-padding-large w3-hide-small w3-right"><b><font color="green">
+<script src='https://kit.fontawesome.com/a076d05399.js'></script><i class='fas fa-biohazard'></i></font></b></a> -->
 </div>
 <script>
 function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
