--- a/portfolio2021.html
+++ b/portfolio2021.html
@@ -31,30 +31,6 @@ body, html {height: 100%; line-height: 1.8;}
 .menu {display: none;}
   </style>
   <body>
-    <!--  ////////////////////////// messenger_platform  ////////////////////////// -->
-    <!-- Load Facebook SDK for JavaScript -->
-    <div id="fb-root"></div>
-    <script>
-      (function (d, s, id) {
-        var js,
-          fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1";
-        fjs.parentNode.insertBefore(js, fjs);
-      })(document, "script", "facebook-jssdk");
-    </script>
-    <!-- Your customer chat code -->
-    <div
-      class="fb-customerchat"
-      attribution="setup_tool"
-      page_id="1610585155641169"
-      theme_color="#72c494"
-      logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
-      logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
-    ></div>
-    <!--  ////////////////////////// messenger_platform  ////////////////////////// -->
     <!-- //////////////////////////Top menu////////////////////////// -->
 <style>
 .topnav {overflow: hidden; background-color:rgb(0, 0, 0);}
@@ -380,7 +356,7 @@ for (i = 0; i < acc.length; i++) {
         <div class="w3-row-padding">
           <center>
             <p>Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα, ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger.</p>
-<!-- https://www.messenger.com/t/alexandroshub --> <i class="fab fa-facebook-messenger"onclick="window.location.href='m.me/alexandroshub';" style="cursor:pointer" title="messenger"></i>
+<i class="fab fa-facebook-messenger"onclick="window.location.href='https://www.messenger.com/t/alexandroshub';" style="cursor:pointer" title="m.me/alexandroshub"></i>
           </center>
         </div>
       </footer>
